diesel_compile_tests/tests/fail/valid_grouping_and_boxed_expressions.stderr
warning: unused import: `MixedAggregates`
 --> tests/fail/valid_grouping_and_boxed_expressions.rs:4:40
  |
LL | use diesel::expression::{is_aggregate, MixedAggregates, ValidGrouping};
  |                                        ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `dyn BoxableExpression<..., ..., SqlType = ...>: ValidGrouping<...>` is not satisfied
    --> tests/fail/valid_grouping_and_boxed_expressions.rs:72:10
     |
  LL |         .select(some_ungrouped_expression(true))
     |          ^^^^^^ unsatisfied trait bound
     |
help: the trait `ValidGrouping<columns::id>` is not implemented for `dyn BoxableExpression<table, Pg, SqlType = ...>`
      but trait `ValidGrouping<()>` is implemented for it
    --> DIESEL/diesel/diesel/src/expression/mod.rs
     |
LL | / impl<QS, ST, DB, GB, IsAggregate> ValidGrouping<GB>
LL | |     for dyn BoxableExpression<QS, DB, GB, IsAggregate, SqlType = ST> + '_
     | |_________________________________________________________________________^
     = help: for that trait implementation, expected `()`, found `columns::id`
     = note: required for `Box<...>` to implement `ValidGrouping<columns::id>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `SelectDsl<Box<...>>`
  
     
error[E0277]: the trait bound `dyn BoxableExpression<..., ..., SqlType = ...>: ValidGrouping<...>` is not satisfied
    --> tests/fail/valid_grouping_and_boxed_expressions.rs:74:22
     |
  LL |         .load::<i32>(&mut conn);
     |          ----        ^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
help: the trait `ValidGrouping<columns::id>` is not implemented for `dyn BoxableExpression<table, Pg, SqlType = ...>`
      but trait `ValidGrouping<()>` is implemented for it
    --> DIESEL/diesel/diesel/src/expression/mod.rs
     |
LL | / impl<QS, ST, DB, GB, IsAggregate> ValidGrouping<GB>
LL | |     for dyn BoxableExpression<QS, DB, GB, IsAggregate, SqlType = ST> + '_
     | |_________________________________________________________________________^
     = help: for that trait implementation, expected `()`, found `columns::id`
     = note: required for `Box<...>` to implement `ValidGrouping<columns::id>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `Query`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, _, i32>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     
error[E0271]: type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
  --> tests/fail/valid_grouping_and_boxed_expressions.rs:93:17
   |
LL |         .select(maybe_grouped(true))
   |                 ^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
   |
note: expected this to be `diesel::expression::is_contained_in_group_by::Yes`
  --> tests/fail/valid_grouping_and_boxed_expressions.rs:9:1
   |
 LL | / table! {
LL | |     users {
LL | |         id -> Integer,
LL | |         name -> Text,
LL | |     }
LL | | }
   | |_^
note: required for `columns::id` to implement `ValidGrouping<columns::name>`
  --> tests/fail/valid_grouping_and_boxed_expressions.rs:11:9
   |
LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
   --> tests/fail/valid_grouping_and_boxed_expressions.rs:110:10
    |
LL |         .select((
    |          ^^^^^^ unsatisfied trait bound
    |
    = help: the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
    = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
    = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
    = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
   --> DIESEL/diesel/diesel/src/expression/mod.rs
    |
LL |     impl MixedAggregates<Yes> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Yes>`
...
LL |     impl MixedAggregates<Never> for Yes {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
    = note: required for `(Box<...>, ...)` to implement `ValidGrouping<()>`
    = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<(Box<...>, ...)>`
 
    
error[E0277]: mixing aggregate and not aggregate expressions is not allowed in SQL
    --> tests/fail/valid_grouping_and_boxed_expressions.rs:115:37
     |
 LL |         .load::<(Option<i32>, i32)>(&mut conn);
     |          ----                       ^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
     = note: you tried to combine expressions that aggregate over a certain column with expressions that don't aggregate over that column
     = note: try to either use aggregate functions like `min`/`max`/… for this column or add the column to your `GROUP BY` clause
     = note: also there are clauses like `WHERE` or `RETURNING` that does not accept aggregate expressions at all
help: the following other types implement trait `MixedAggregates<Other>`
    --> DIESEL/diesel/diesel/src/expression/mod.rs
     |
 LL |     impl MixedAggregates<Yes> for Yes {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Yes>`
...
 LL |     impl MixedAggregates<Never> for Yes {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::expression::is_aggregate::Yes` implements `MixedAggregates<diesel::expression::is_aggregate::Never>`
     = note: required for `(Box<...>, ...)` to implement `ValidGrouping<()>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `Query`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, _, (Option<i32>, i32)>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
